src/objects/Open311_API_Log__c.object
<CustomObject>
    <fields>
        <fullName>APIKey__c</fullName>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <label>Request Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Param__c</fullName>
        <label>Request Param</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Format__c</fullName>
        <label>Response Format</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Open311 API Log</label>
    <listViews>
        <fullName>ALL_CAD</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>bade5a0af7574c718aa7f951652f3028</value>
        </filters>
        <label>ALL - CAD</label>
    </listViews>
    <listViews>
        <fullName>ALL_CAD_ERROR</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>bade5a0af7574c718aa7f951652f3028</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>ALL - CAD ERROR</label>
    </listViews>
    <listViews>
        <fullName>ALL_CAD_PUT</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>bade5a0af7574c718aa7f951652f3028</value>
        </filters>
        <filters>
            <field>Request_Method__c</field>
            <operation>equals</operation>
            <value>PUT</value>
        </filters>
        <label>ALL - CAD PUT</label>
    </listViews>
    <listViews>
        <fullName>ALL_DDOT</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>e3a798af9e7041abbdd476d5d6de1596</value>
        </filters>
        <filters>
            <field>Request_Method__c</field>
            <operation>equals</operation>
            <value>get</value>
        </filters>
        <label>ALL - DDOT</label>
    </listViews>
    <listViews>
        <fullName>ALL_DDOT_ERROR</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>e3a798af9e7041abbdd476d5d6de1596</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>ALL - DDOT ERROR</label>
    </listViews>
    <listViews>
        <fullName>ALL_DDOT_PUT</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>e3a798af9e7041abbdd476d5d6de1596</value>
        </filters>
        <filters>
            <field>Request_Method__c</field>
            <operation>equals</operation>
            <value>PUT</value>
        </filters>
        <label>ALL - DDOT - PUT</label>
    </listViews>
    <listViews>
        <fullName>ALL_DPW</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>c87b89f311c949bdae6062b3e7adbfdb</value>
        </filters>
        <label>ALL - DPW</label>
    </listViews>
    <listViews>
        <fullName>ALL_DPW_ERROR</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>c87b89f311c949bdae6062b3e7adbfdb</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>ALL - DPW ERROR</label>
    </listViews>
    <listViews>
        <fullName>ALL_DPW_PUT</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Log__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIKey__c</field>
            <operation>equals</operation>
            <value>c87b89f311c949bdae6062b3e7adbfdb</value>
        </filters>
        <filters>
            <field>Request_Method__c</field>
            <operation>equals</operation>
            <value>PUT</value>
        </filters>
        <label>ALL - DPW PUT</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>APIKey__c</columns>
        <columns>Private__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_PUT</fullName>
        <columns>NAME</columns>
        <columns>APIKey__c</columns>
        <columns>Log__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Endpoint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Method__c</field>
            <operation>equals</operation>
            <value>PUT</value>
        </filters>
        <label>All - PUT</label>
    </listViews>
    <listViews>
        <fullName>All_PUTandPOST</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>APIKey__c</columns>
        <columns>Private__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Method__c</field>
            <operation>notEqual</operation>
            <value>GET</value>
        </filters>
        <label>All - PUT and POST</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>APIKey__c</columns>
        <columns>Private__c</columns>
        <columns>Request_Method__c</columns>
        <columns>Request_Param__c</columns>
        <columns>Status__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Log__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Errors</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open311 API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>